# kavach-rs

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.work  justfile
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
cmd/kavach/: go.mod  main.go
config/: agent-mappings.toon  frameworks.toon  nlu-patterns.toon  patterns.toon  router-mappings.toon  rust-cli.toon  skill-patterns.toon  suppression-patterns.toon  valid-skills.toon
configs/darwin/: AGENTS.md  CLAUDE.md  (+1 more)
crates/kavach-cli/: Cargo.toml
crates/kavach-cli/src/: config.rs  hook.rs  main.rs  patterns.rs  session.rs
crates/kavach-cli/src/commands/: agents.rs  lint.rs  mod.rs  quality.rs  skills.rs  status.rs  telemetry.rs
crates/kavach-cli/src/commands/gates/: intent.rs  mod.rs  post_tool.rs  post_write.rs  pre_tool.rs  pre_write.rs  subagent.rs
crates/kavach-cli/src/commands/memory/: bank.rs  inject.rs  kanban.rs  mod.rs  rpc.rs  spec.rs  stm.rs  sync.rs  view.rs  write.rs
crates/kavach-cli/src/commands/orch/: aegis.rs  dag.rs  mod.rs  task_health.rs  verify.rs
crates/kavach-cli/src/commands/session/: compact.rs  end.rs  end_hook.rs  init.rs  land.rs  mod.rs  resume.rs  validate.rs
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  CROSS_PLATFORM.md  HOOKS.md  INSTALLATION.md  MEMORY_BANK.md  MIGRATION_GUIDE.md  STRUCTURE.md
examples/: README.md
install/: install.ps1  install.sh
scripts/: init-memory-bank.sh
shared/: go.mod
tests/: edge_case_audit.sh  p0_audit.sh
(+240 files in other folders)
