[package]
name = "kavach-cli"
version = "0.1.0"
edition = "2021"
description = "Brahmastra Stack - Universal AI CLI Enforcement (Rust)"

[[bin]]
name = "kavach"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
dirs = "5"
